--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2024"
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
 sdl2 = "0.37.0"
+
+
+[features]
+default = []
+cpu-only-tests = []
