--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2024"
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
 sdl2 = "0.37.0"
+nfd = "0.0.4"
 
 
-[features]
-default = []
-cpu-only-tests = []
+[cfg.test.dependencies]
