--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
 sdl2 = "0.37.0"
 nfd = "0.0.4"
-
+crossbeam-channel = "0.5.15"
 
 [cfg.test.dependencies]
